# myscrun

./: .env.example  .gitignore  ABOUT.MD  README.md  pyproject.toml
authentication/: models.py  urls.py
authentication/migrations/: 0001_initial.py
core/: choices.py  settings.py  urls.py
core/permissions/: member.py  projects.py
core/view/: viewsets.py
docs/: er-diagram.md
master/: permissions.py
members/: admin.py  models.py  urls.py
members/migrations/: 0001_initial.py  0002_alter_member_options.py  0002_initial.py  0003_rename_invited_at_organizationmember_joined_at_and_more.py
members/selectors/: querys.py
members/serializers/: invitation.py  member.py  org_member.py  organization.py  register.py  user.py
members/services/: invitation_service.py
members/templates/emails/: invitation.html
members/views/: invitation.py  me.py  members.py  register.py
organization/: models.py
organization/migrations/: 0001_initial.py
organization/serializers/: member.py  organization.py  projects.py  team.py
organization/views/: organization.py
scrun/: apps.py
scrun_master/: admin.py  apps.py  models.py  urls.py
scrun_master/migrations/: 0001_initial.py  0002_alter_project_organization_alter_teammember_project.py  0002_task_project.py
scrun_master/permissions/: projects.py
scrun_master/serializers/: comment.py  projects.py  sprint.py  task.py  team.py
scrun_master/views/: projects.py  task.py  team.py
